scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -53,7 +53,7 @@
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%
+    --chart-5: 340 75% 55%;
   }
 }
 @layer base {
@@ -62,5 +62,19 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@layer utilities {
+  .no-scroll-buttons::-webkit-scrollbar-button {
+    display: none;
+  }
+  .rounded-scrollbar::-webkit-scrollbar {
+    width: 8px; /* Adjust the width as needed */
+  }
+
+  .rounded-scrollbar::-webkit-scrollbar-thumb {
+    /* Tailwind gray-500 color */
+    border-radius: 10px; /* Rounds the ends of the scrollbar thumb */
   }
 }
